<resources>
    <string name="app_name" translatable="false">Emenew Light</string>

    <!-- Notification Channel -->
    <string name="notification_channel_id" translatable="false">nc_general</string>
    <string name="notification_channel_name" translatable="false">General</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="reprint">Reprint</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="loading">Loading</string>
    <string name="login_title">Login</string>
    <string name="home_title">Home</string>
    <string name="printing">Printing…</string>
    <string name="cancel">Cancel</string>
    <string name="production_order">Production Order</string>
    <string name="to_take_away">To Take Away</string>
    <string name="click_and_collect">Click &amp; Collect</string>

    <!-- Errors -->
    <string name="invalid_email_error_message">Enter a valid email address</string>
    <string name="invalid_password_error_message">Password must be at least 6 characters long</string>
    <string name="network_error_message">Network Error! Please check your internet connection</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="getting_receipt_data">Getting Receipt Data</string>
    <string name="parsing_receipt_data">Parsing Receipt Data</string>
    <string name="data_parsing_error">"Invalid receipt data "</string>
    <string name="logout">Logout</string>
    <string name="print_by_usb">Print by USB Printer</string>
    <string name="no_printer_message">No printer connected</string>
    <string name="connected_printer">Connected Printer: %1$s</string>
    <string name="print_service_running">Print Service Running</string>
    <string name="history">History</string>
    <string name="printer_info">Printer Info</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="device_id">Device ID</string>
    <string name="product_name">Product Name</string>
    <string name="product_id">Product ID:</string>
    <string name="vendor_id">Vendor ID:</string>
    <string name="products">Products</string>
    <string name="invoice_message">Thank you for your visit</string>
    <string name="invoice_phone">Phone +%1$s</string>
    <string name="invoice_vat">VAT number %1$s</string>
    <string name="invoice_vat_rc">VAT  RC %1$s</string>
    <string name="invoice_table">Table: %1$s</string>
    <string name="invoice_order">Order: %1$s</string>
    <string name="invoice_subtotal">Subtotal</string>
    <string name="total_due">Total due</string>
    <string name="total_paid">Total paid</string>
    <string name="invoice_reduction">Reduction</string>
    <string name="invoice_delivery">Delivery</string>
    <string name="invoice_vat_perc">VAT %1$s%% (%2$.02f)</string>
    <string name="print_kitchen_receipt">Print Kitchen Receipt</string>
    <string name="print_invoice">Print Order Receipt</string>
    <string name="order_id">Order ID</string>
    <string name="errr_order_id">Enter a valid order ID.</string>
    <string name="no_device_connected">No device connected</string>
    <string name="detect_device">Detect Device</string>
    <string name="print_string">Print String</string>
    <string name="test_print">Test Print</string>
    <string name="test_print_encoded">Test Encoded Print</string>
    <string name="error_print_text">Enter a valid print text!</string>
    <string name="unknown_error_message">Unknown Error</string>
    <string name="connecting_printer">Connecting printer…</string>
    <string name="printer_connected">Printer is connected…</string>
    <string name="printer_printing">Printer is printing…</string>
    <string name="printing_in_progress">Printing in progress…</string>
    <string name="printing_finished">Printer has finished printing…</string>
    <string name="printer_connection_error">Unable to connect printer.</string>
    <string name="no_printer_error">The application can\'t find any connected printer.</string>
    <string name="finish_success">Congratulation! The text is printed!</string>
    <string name="parser_error">It seems to be an invalid syntax problem.</string>
    <string name="encoding_error">The selected encoding character returning an error.</string>
    <string name="barcode_error">Data send to be converted to barcode or QR code seems to be invalid.</string>
    <string name="invalid_command">Invalid Command</string>
    <string name="test_cash_drawer">Cash Drawer Test</string>
    <string name="no_printer">No Printer</string>
    <string name="label_add_printer">Add Printer</string>
    <string name="label_printer">Printer</string>
    <string name="label_printer_type">Printer Type</string>
    <string name="label_bluetooth">Bluetooth</string>
    <string name="label_usb">USB</string>
    <string name="label_network">Network</string>
    <string name="label_select_printer_type">Select Printer Type</string>
    <string name="label_search_printer">Search Printer</string>
    <string name="error_printer_type">Please select printer type.</string>
    <string name="label_bluetooth_printer">Bluetooth Printer</string>
    <string name="label_usb_printer">USB Printer</string>
    <string name="label_internal_printer">Internal Printer</string>
    <string name="label_sunmi">Sunmi</string>
    <string name="label_star">Star</string>
    <string name="label_generic">Generic</string>
    <string name="label_network_printer">Network Printer</string>
    <string name="label_unknown_printer">Unknown Printer</string>
    <string name="label_select_printer">Select Printer</string>
    <string name="label_alias">Alias</string>
    <string name="label_printer_alias">Enter printer alias</string>
    <string name="label_model">Model</string>
    <string name="label_identifier">Identifier</string>
    <string name="label_encoding">Encoding</string>
    <string name="label_select_printer_encoding">Select Printer Encoding</string>
    <string name="error_printer_tag">Please select a printer tag</string>
    <string name="default_printer">Default Printer</string>
    <string name="add_printer_error_message">Printer already added</string>
    <string name="print_service_title">Print Service</string>
    <string name="print_service_running_message">Print service is running...</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="ip_address_error_message">Enter a valid ip address.</string>
    <string name="ip_port_error_message">Enter a valid port number</string>
    <string name="instruction_type">Instruction Type</string>
    <string name="label_select_instruction_type">Select Instruction Type</string>
    <string name="select_manufacturer_label">Select Manufacturer</string>
    <string name="label_confirmation">Confirmation</string>
    <string name="message_defualt_printer">Do you want to set %1$s as default printer?</string>
    <string name="label_paper_size">Paper Size</string>
    <string name="label_select_paper_size">Select Paper Size</string>
    <string name="label_cash_drawer_status">Cash Drawer Open Status</string>
    <string name="printer_tags_label">Printer Tags</string>
    <string name="printer_tag_label">Printer Tag</string>
    <string name="add_tag_label">Add Tag</string>
    <string name="settings">Settings</string>
    <string name="enter_printer_tag_hint">Enter printer tag</string>
    <string name="enter_printer_special_char_hint">Enter special characters</string>
    <string name="invalid_printer_tag">Enter a valid printer tag</string>
    <string name="invalid_printer_special_char">Enter a valid special characters</string>
    <string name="paper_size_3_inch">Paper Size 3"</string>
    <string name="paper_size_2_inch">Paper Size 2"</string>
    <string name="processing_images_message">Processing Images..</string>
    <string name="remove_printer_confirm_message">Do you want to remove %1$s?</string>
    <string name="paper_size_label">Paper Size</string>
    <string name="character_set_label">Character Set</string>
    <string name="select_character_set_label">Select Character Set</string>
    <string name="label_save_printer">Save Printer</string>
    <string name="label_delete_printer">Delete Printer</string>

    <!-- Sunmi -->
    <string name="toast_3">Bluetooth device is unavailable</string>
    <string name="toast_4">Bluetooth device not detected. Please open Bluetooth!</string>
    <string name="toast_5">Not Found InnterPrinter!</string>
    <string name="toast_6">Bluetooth connect failed!</string>
    <string name="label_special_characters">Allowed Special Characters</string>
    <string name="instruction_type_label">Instructions Set</string>
    <string name="select_instructions_type">Select Instructions Type</string>
    <string name="scale_text_label">Scale Print Text</string>
    <string name="raster_print_settings_label">Raster Print Settings</string>
    <string name="builtin_print_settings_label">Builtin Print Settings</string>
    <string name="normal_font_size_label">Normal Font Size</string>
    <string name="label_ok">OK</string>
    <string name="label_exception_log">Exception Log</string>
    <string name="label_pos">POS</string>
    <string name="label_devices">Devices</string>
    <string name="label_toggle_navigation">Toggle Navigation</string>
    <string name="no_printer_device_connected">Oops! No Printer Device Connected</string>
</resources>