<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/label_printer"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/outline" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_printer_type"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/printer_type_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="USB Printer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_model"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/printer_model_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="MX7432" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_identifier"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/printer_identifier_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="00:00:00:00:00:00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/printer_tag_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/printer_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleSelection="true" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/paper_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/paper_size_label"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/character_set"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/character_set_label"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_printer_button"
                style="@style/Widget.App.GradientButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_save_printer" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_button"
                style="@style/Widget.App.GradientButton.Error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_delete_printer" />
        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>