<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/label_devices"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/outline" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_printer_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_printer"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <ImageButton
            android:id="@+id/add_printer_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_fab"
            android:contentDescription="@string/label_add_printer"
            android:elevation="8dp"
            android:src="@drawable/ic_add" />

    </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>