<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/outline" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/printer_tags_label"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/outline" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surfaceDark"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/raster_print_settings_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/scale_text_label"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/scale_test_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/outline" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/font_size_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/normal_font_size_label"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                <TextView
                    android:id="@+id/font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="12" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/outline" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/surfaceDark"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/builtin_print_settings_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/outline" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/builtin_font_size_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/normal_font_size_label"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                <TextView
                    android:id="@+id/builtin_font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="12" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/outline" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>